# CCSL-0.1

./: CMakeLists.txt  README.md  code-checker.c  license.md  license_description.md
doc/: Doxyfile.in
doc/latex/: ccsl_documentation.aux  ccsl_documentation.out  ccsl_documentation.tex  ccsl_documentation.toc
examples/: CMakeLists.txt  basic_example.cpp  metrics_example.cpp  payment_example.cpp
include/ccsl/: license.hpp  metrics.hpp  payment.hpp  utility.hpp
src/ccsl/: license.cpp  metrics.cpp  payment.cpp  utility.cpp
test/: license_test.cpp  metrics_test.cpp  payment_test.cpp  test_framework.hpp
